Add categories, product images, provenance, and verified status to auctions